--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,782 +1,1 @@
-@charset "UTF-8";
-body {
-  padding: 0;
-  margin: 0;
-}
-
-.col-1, .col-2, .col-3,
-.col-4, .col-5, .col-6,
-.col-7, .col-8, .col-9,
-.col-10, .col-11, .col-12 {
-  align-self: flex-start;
-  box-sizing: border-box;
-}
-
-.col-1 {
-  width: 8.33%;
-}
-
-.col-2 {
-  width: 16.66%;
-}
-
-.col-3 {
-  width: 25%;
-}
-
-.col-4 {
-  width: 33.33%;
-}
-
-.col-5 {
-  width: 41.66%;
-}
-
-.col-6 {
-  width: 50%;
-}
-
-.col-7 {
-  width: 58.33%;
-}
-
-.col-8 {
-  width: 66.66%;
-}
-
-.col-9 {
-  width: 75%;
-}
-
-.col-10 {
-  width: 83.33%;
-}
-
-.col-11 {
-  width: 91.66%;
-}
-
-.col-12 {
-  width: 100%;
-}
-
-.row {
-  display: flex;
-  flex-flow: row;
-  box-sizing: border-box;
-}
-
-.container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
-
-.m-0 {
-  margin: 0 !important;
-}
-
-.mt-0 {
-  margin-top: 0 !important;
-}
-
-.mb-0 {
-  margin-bottom: 0 !important;
-}
-
-.ml-0 {
-  margin-left: 0 !important;
-}
-
-.mr-0 {
-  margin-right: 0 !important;
-}
-
-.m-1 {
-  margin: 0.25rem !important;
-}
-
-.mt-1 {
-  margin-top: 0.25rem !important;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem !important;
-}
-
-.ml-1 {
-  margin-left: 0.25rem !important;
-}
-
-.mr-1 {
-  margin-right: 0.25rem !important;
-}
-
-.m-2 {
-  margin: 0.5rem !important;
-}
-
-.mt-2 {
-  margin-top: 0.5rem !important;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem !important;
-}
-
-.ml-2 {
-  margin-left: 0.5rem !important;
-}
-
-.mr-2 {
-  margin-right: 0.5rem !important;
-}
-
-.m-3 {
-  margin: 1rem !important;
-}
-
-.mt-3 {
-  margin-top: 1rem !important;
-}
-
-.mb-3 {
-  margin-bottom: 1rem !important;
-}
-
-.ml-3 {
-  margin-left: 1rem !important;
-}
-
-.mr-3 {
-  margin-right: 1rem !important;
-}
-
-.m-4 {
-  margin: 1.5rem !important;
-}
-
-.mt-4 {
-  margin-top: 1.5rem !important;
-}
-
-.mb-4 {
-  margin-bottom: 1.5rem !important;
-}
-
-.ml-4 {
-  margin-left: 1.5rem !important;
-}
-
-.mr-4 {
-  margin-right: 1.5rem !important;
-}
-
-.m-5 {
-  margin: 3rem !important;
-}
-
-.mt-5 {
-  margin-top: 3rem !important;
-}
-
-.mb-5 {
-  margin-bottom: 3rem !important;
-}
-
-.ml-5 {
-  margin-left: 3rem !important;
-}
-
-.mr-5 {
-  margin-right: 3rem !important;
-}
-
-.p-0 {
-  padding: 0 !important;
-}
-
-.pt-0 {
-  padding-top: 0 !important;
-}
-
-.pb-0 {
-  padding-bottom: 0 !important;
-}
-
-.pl-0 {
-  padding-left: 0 !important;
-}
-
-.pr-0 {
-  padding-right: 0 !important;
-}
-
-.p-1 {
-  padding: 0.25rem !important;
-}
-
-.pt-1 {
-  padding-top: 0.25rem !important;
-}
-
-.pb-1 {
-  padding-bottom: 0.25rem !important;
-}
-
-.pl-1 {
-  padding-left: 0.25rem !important;
-}
-
-.pr-1 {
-  padding-right: 0.25rem !important;
-}
-
-.p-2 {
-  padding: 0.5rem !important;
-}
-
-.pt-2 {
-  padding-top: 0.5rem !important;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem !important;
-}
-
-.pl-2 {
-  padding-left: 0.5rem !important;
-}
-
-.pr-2 {
-  padding-right: 0.5rem !important;
-}
-
-.p-3 {
-  padding: 1rem !important;
-}
-
-.pt-3 {
-  padding-top: 1rem !important;
-}
-
-.pb-3 {
-  padding-bottom: 1rem !important;
-}
-
-.pl-3 {
-  padding-left: 1rem !important;
-}
-
-.pr-3 {
-  padding-right: 1rem !important;
-}
-
-.p-4 {
-  padding: 1.5rem !important;
-}
-
-.pt-4 {
-  padding-top: 1.5rem !important;
-}
-
-.pb-4 {
-  padding-bottom: 1.5rem !important;
-}
-
-.pl-4 {
-  padding-left: 1.5rem !important;
-}
-
-.pr-4 {
-  padding-right: 1.5rem !important;
-}
-
-.p-5 {
-  padding: 3rem !important;
-}
-
-.pt-5 {
-  padding-top: 3rem !important;
-}
-
-.pb-5 {
-  padding-bottom: 3rem !important;
-}
-
-.pl-5 {
-  padding-left: 3rem !important;
-}
-
-.pr-5 {
-  padding-right: 3rem !important;
-}
-
-.d-flex {
-  display: flex;
-}
-
-.d-block {
-  display: block;
-}
-
-.d-inline {
-  display: inline;
-}
-
-.d-inline-block {
-  display: inline-block;
-}
-
-.d-none {
-  display: none;
-}
-
-body {
-  font-size: 12pt;
-  color: #333;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 1.25rem;
-  line-height: 1.25rem;
-}
-
-ul {
-  padding-left: 0.75rem;
-}
-ul li {
-  margin-bottom: 0.05rem;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 1.2rem;
-  font-weight: 600;
-}
-
-/*body{
-    background:red;
-}*/
-.home {
-  margin: 0 !important;
-  padding: 0 !important;
-  color: black;
-}
-.home h1 {
-  font-weight: 500;
-  margin-top: 0;
-  font-size: 5vw;
-  margin-bottom: 0.1rem;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-weight: 800;
-}
-.home h2 {
-  font-weight: 500;
-  font-size: 2.8vw;
-  font-family: monospace;
-}
-.home a {
-  margin-right: 2rem;
-}
-.home ul {
-  list-style: none;
-  padding-left: 0;
-  display: flex;
-  flex-flow: row;
-}
-.home ul li {
-  margin-bottom: 0.5rem;
-  font-size: 1rem;
-}
-.home ul li a {
-  font-size: 13pt;
-  font-family: monospace;
-}
-
-.resume {
-  background: black;
-  color: #333;
-  font-family: "Source Sans 3", sans-serif;
-  font-size: 12pt;
-}
-.resume .container {
-  padding: 5rem;
-  margin: 0 auto;
-  max-width: 1020px;
-}
-@media (max-width: 1024px) {
-  .resume .container {
-    padding: 2rem;
-  }
-}
-.resume h1 {
-  color: red;
-  margin-bottom: 0.5rem;
-  font-size: 28pt;
-  font-family: "Libre Baskerville", serif;
-}
-.resume h3 {
-  font-size: 1.3rem;
-}
-.resume strong {
-  font-weight: 600;
-  line-height: 1.5rem;
-}
-.resume p.ff-monospace {
-  margin-bottom: 0.5rem;
-  line-height: 1.5rem;
-}
-.resume a {
-  color: #000;
-}
-.resume ul {
-  list-style: none;
-  padding-left: 0rem;
-}
-.resume ul li {
-  margin-bottom: 0.05rem;
-  font-size: 1rem;
-}
-.resume ul li::before {
-  content: "−";
-  color: black;
-  font-weight: bold;
-  display: inline-block;
-  width: 1rem;
-  position: relative;
-  margin-left: 0rem;
-}
-
-/* Font sizes fs-XX*/
-.fs-1 {
-  font-size: 1pt;
-}
-
-.fs-2 {
-  font-size: 2pt;
-}
-
-.fs-3 {
-  font-size: 3pt;
-}
-
-.fs-4 {
-  font-size: 4pt;
-}
-
-.fs-5 {
-  font-size: 5pt;
-}
-
-.fs-6 {
-  font-size: 6pt;
-}
-
-.fs-7 {
-  font-size: 7pt;
-}
-
-.fs-8 {
-  font-size: 8pt;
-}
-
-.fs-9 {
-  font-size: 9pt;
-}
-
-.fs-10 {
-  font-size: 10pt;
-}
-
-.fs-11 {
-  font-size: 11pt;
-}
-
-.fs-12 {
-  font-size: 12pt;
-}
-
-.fs-13 {
-  font-size: 13pt;
-}
-
-.fs-14 {
-  font-size: 14pt;
-}
-
-.fs-15 {
-  font-size: 15pt;
-}
-
-.fs-16 {
-  font-size: 16pt;
-}
-
-.fs-17 {
-  font-size: 17pt;
-}
-
-.fs-18 {
-  font-size: 18pt;
-}
-
-.fs-19 {
-  font-size: 19pt;
-}
-
-.fs-20 {
-  font-size: 20pt;
-}
-
-.fs-21 {
-  font-size: 21pt;
-}
-
-.fs-22 {
-  font-size: 22pt;
-}
-
-.fs-23 {
-  font-size: 23pt;
-}
-
-.fs-24 {
-  font-size: 24pt;
-}
-
-.fs-25 {
-  font-size: 25pt;
-}
-
-.fs-26 {
-  font-size: 26pt;
-}
-
-.fs-27 {
-  font-size: 27pt;
-}
-
-.fs-28 {
-  font-size: 28pt;
-}
-
-.fs-29 {
-  font-size: 29pt;
-}
-
-.fs-30 {
-  font-size: 30pt;
-}
-
-.fs-31 {
-  font-size: 31pt;
-}
-
-.fs-32 {
-  font-size: 32pt;
-}
-
-.fs-33 {
-  font-size: 33pt;
-}
-
-.fs-34 {
-  font-size: 34pt;
-}
-
-.fs-35 {
-  font-size: 35pt;
-}
-
-.fs-36 {
-  font-size: 36pt;
-}
-
-.fs-37 {
-  font-size: 37pt;
-}
-
-.fs-38 {
-  font-size: 38pt;
-}
-
-.fs-39 {
-  font-size: 39pt;
-}
-
-.fs-40 {
-  font-size: 40pt;
-}
-
-.fs-41 {
-  font-size: 41pt;
-}
-
-.fs-42 {
-  font-size: 42pt;
-}
-
-.fs-43 {
-  font-size: 43pt;
-}
-
-.fs-44 {
-  font-size: 44pt;
-}
-
-.fs-45 {
-  font-size: 45pt;
-}
-
-.fs-46 {
-  font-size: 46pt;
-}
-
-.fs-47 {
-  font-size: 47pt;
-}
-
-.fs-48 {
-  font-size: 48pt;
-}
-
-.fs-49 {
-  font-size: 49pt;
-}
-
-.fs-50 {
-  font-size: 50pt;
-}
-
-.fs-51 {
-  font-size: 51pt;
-}
-
-.fs-52 {
-  font-size: 52pt;
-}
-
-.fs-53 {
-  font-size: 53pt;
-}
-
-.fs-54 {
-  font-size: 54pt;
-}
-
-.fs-55 {
-  font-size: 55pt;
-}
-
-.fs-56 {
-  font-size: 56pt;
-}
-
-.fs-57 {
-  font-size: 57pt;
-}
-
-.fs-58 {
-  font-size: 58pt;
-}
-
-.fs-59 {
-  font-size: 59pt;
-}
-
-.fs-60 {
-  font-size: 60pt;
-}
-
-.fs-61 {
-  font-size: 61pt;
-}
-
-.fs-62 {
-  font-size: 62pt;
-}
-
-.fs-63 {
-  font-size: 63pt;
-}
-
-.fs-64 {
-  font-size: 64pt;
-}
-
-/* Font weights fw-XX*/
-.fw-100 {
-  font-weight: 100;
-}
-
-.fw-200 {
-  font-weight: 200;
-}
-
-.fw-300 {
-  font-weight: 300;
-}
-
-.fw-400 {
-  font-weight: 400;
-}
-
-.fw-500 {
-  font-weight: 500;
-}
-
-.fw-600 {
-  font-weight: 600;
-}
-
-.fw-700 {
-  font-weight: 700;
-}
-
-.fw-800 {
-  font-weight: 800;
-}
-
-.fw-900 {
-  font-weight: 900;
-}
-
-@media print {
-  .d-none-print {
-    display: none !important;
-  }
-}
-
-.ff-monospace {
-  font-family: monospace;
-}
-
-.fw-normal {
-  font-weight: 400;
-}
-
-.fw-bold {
-  font-weight: 600;
-}
-
-.ff-libre, .ff-baskerville, .ff-libre-baskerville {
-  font-family: "Libre Baskerville", serif;
-}
-
-.ff-source-sans {
-  font-family: "Source Sans 3", sans-serif;
-}
-
-.color-gray {
-  color: #555;
-}
-
-.bg-white {
-  background: white;
-}
-
-/*# sourceMappingURL=styles.css.map */
+﻿body{padding:0;margin:0}.col-1,.col-2,.col-3,.col-4,.col-5,.col-6,.col-7,.col-8,.col-9,.col-10,.col-11,.col-12{align-self:flex-start;box-sizing:border-box}.col-1{width:8.33%}.col-2{width:16.66%}.col-3{width:25%}.col-4{width:33.33%}.col-5{width:41.66%}.col-6{width:50%}.col-7{width:58.33%}.col-8{width:66.66%}.col-9{width:75%}.col-10{width:83.33%}.col-11{width:91.66%}.col-12{width:100%}.row{display:flex;flex-flow:row;box-sizing:border-box}.container{width:100%;max-width:1200px;margin:0 auto;box-sizing:border-box}.m-0{margin:0 !important}.mt-0{margin-top:0 !important}.mb-0{margin-bottom:0 !important}.ml-0{margin-left:0 !important}.mr-0{margin-right:0 !important}.m-1{margin:.25rem !important}.mt-1{margin-top:.25rem !important}.mb-1{margin-bottom:.25rem !important}.ml-1{margin-left:.25rem !important}.mr-1{margin-right:.25rem !important}.m-2{margin:.5rem !important}.mt-2{margin-top:.5rem !important}.mb-2{margin-bottom:.5rem !important}.ml-2{margin-left:.5rem !important}.mr-2{margin-right:.5rem !important}.m-3{margin:1rem !important}.mt-3{margin-top:1rem !important}.mb-3{margin-bottom:1rem !important}.ml-3{margin-left:1rem !important}.mr-3{margin-right:1rem !important}.m-4{margin:1.5rem !important}.mt-4{margin-top:1.5rem !important}.mb-4{margin-bottom:1.5rem !important}.ml-4{margin-left:1.5rem !important}.mr-4{margin-right:1.5rem !important}.m-5{margin:3rem !important}.mt-5{margin-top:3rem !important}.mb-5{margin-bottom:3rem !important}.ml-5{margin-left:3rem !important}.mr-5{margin-right:3rem !important}.p-0{padding:0 !important}.pt-0{padding-top:0 !important}.pb-0{padding-bottom:0 !important}.pl-0{padding-left:0 !important}.pr-0{padding-right:0 !important}.p-1{padding:.25rem !important}.pt-1{padding-top:.25rem !important}.pb-1{padding-bottom:.25rem !important}.pl-1{padding-left:.25rem !important}.pr-1{padding-right:.25rem !important}.p-2{padding:.5rem !important}.pt-2{padding-top:.5rem !important}.pb-2{padding-bottom:.5rem !important}.pl-2{padding-left:.5rem !important}.pr-2{padding-right:.5rem !important}.p-3{padding:1rem !important}.pt-3{padding-top:1rem !important}.pb-3{padding-bottom:1rem !important}.pl-3{padding-left:1rem !important}.pr-3{padding-right:1rem !important}.p-4{padding:1.5rem !important}.pt-4{padding-top:1.5rem !important}.pb-4{padding-bottom:1.5rem !important}.pl-4{padding-left:1.5rem !important}.pr-4{padding-right:1.5rem !important}.p-5{padding:3rem !important}.pt-5{padding-top:3rem !important}.pb-5{padding-bottom:3rem !important}.pl-5{padding-left:3rem !important}.pr-5{padding-right:3rem !important}.d-flex{display:flex}.d-block{display:block}.d-inline{display:inline}.d-inline-block{display:inline-block}.d-none{display:none}body{font-size:12pt;color:#333}p{margin-top:0;margin-bottom:1.25rem;line-height:1.25rem}ul{padding-left:.75rem}ul li{margin-bottom:.05rem}h1,h2,h3,h4,h5,h6{margin:0;padding:0;margin-bottom:1.2rem;font-weight:600}.home{margin:0 !important;padding:0 !important;color:#000}.home h1{font-weight:500;margin-top:0;font-size:5vw;margin-bottom:.1rem;font-family:"Trebuchet MS","Lucida Sans Unicode","Lucida Grande","Lucida Sans",Arial,sans-serif;font-weight:800}.home h2{font-weight:500;font-size:2.8vw;font-family:monospace}.home a{margin-right:2rem}.home ul{list-style:none;padding-left:0;display:flex;flex-flow:row}.home ul li{margin-bottom:.5rem;font-size:1rem}.home ul li a{font-size:13pt;font-family:monospace}.resume{background:#000;color:#333;font-family:"Source Sans 3",sans-serif;font-size:12pt}.resume .container{padding:5rem;margin:0 auto;max-width:1020px}@media(max-width: 1024px){.resume .container{padding:2rem}}.resume h1{color:red;margin-bottom:.5rem;font-size:28pt;font-family:"Libre Baskerville",serif}.resume h3{font-size:1.3rem}.resume strong{font-weight:600;line-height:1.5rem}.resume p.ff-monospace{margin-bottom:.5rem;line-height:1.5rem}.resume a{color:#000}.resume ul{list-style:none;padding-left:0rem}.resume ul li{margin-bottom:.05rem;font-size:1rem}.resume ul li::before{content:"−";color:#000;font-weight:bold;display:inline-block;width:1rem;position:relative;margin-left:0rem}.fs-1{font-size:1pt}.fs-2{font-size:2pt}.fs-3{font-size:3pt}.fs-4{font-size:4pt}.fs-5{font-size:5pt}.fs-6{font-size:6pt}.fs-7{font-size:7pt}.fs-8{font-size:8pt}.fs-9{font-size:9pt}.fs-10{font-size:10pt}.fs-11{font-size:11pt}.fs-12{font-size:12pt}.fs-13{font-size:13pt}.fs-14{font-size:14pt}.fs-15{font-size:15pt}.fs-16{font-size:16pt}.fs-17{font-size:17pt}.fs-18{font-size:18pt}.fs-19{font-size:19pt}.fs-20{font-size:20pt}.fs-21{font-size:21pt}.fs-22{font-size:22pt}.fs-23{font-size:23pt}.fs-24{font-size:24pt}.fs-25{font-size:25pt}.fs-26{font-size:26pt}.fs-27{font-size:27pt}.fs-28{font-size:28pt}.fs-29{font-size:29pt}.fs-30{font-size:30pt}.fs-31{font-size:31pt}.fs-32{font-size:32pt}.fs-33{font-size:33pt}.fs-34{font-size:34pt}.fs-35{font-size:35pt}.fs-36{font-size:36pt}.fs-37{font-size:37pt}.fs-38{font-size:38pt}.fs-39{font-size:39pt}.fs-40{font-size:40pt}.fs-41{font-size:41pt}.fs-42{font-size:42pt}.fs-43{font-size:43pt}.fs-44{font-size:44pt}.fs-45{font-size:45pt}.fs-46{font-size:46pt}.fs-47{font-size:47pt}.fs-48{font-size:48pt}.fs-49{font-size:49pt}.fs-50{font-size:50pt}.fs-51{font-size:51pt}.fs-52{font-size:52pt}.fs-53{font-size:53pt}.fs-54{font-size:54pt}.fs-55{font-size:55pt}.fs-56{font-size:56pt}.fs-57{font-size:57pt}.fs-58{font-size:58pt}.fs-59{font-size:59pt}.fs-60{font-size:60pt}.fs-61{font-size:61pt}.fs-62{font-size:62pt}.fs-63{font-size:63pt}.fs-64{font-size:64pt}.fw-100{font-weight:100}.fw-200{font-weight:200}.fw-300{font-weight:300}.fw-400{font-weight:400}.fw-500{font-weight:500}.fw-600{font-weight:600}.fw-700{font-weight:700}.fw-800{font-weight:800}.fw-900{font-weight:900}@media print{.d-none-print{display:none !important}}.ff-monospace{font-family:monospace}.fw-normal{font-weight:400}.fw-bold{font-weight:600}.ff-libre,.ff-baskerville,.ff-libre-baskerville{font-family:"Libre Baskerville",serif}.ff-source-sans{font-family:"Source Sans 3",sans-serif}.color-gray{color:#555}.bg-white{background:#fff}/*# sourceMappingURL=styles.css.map */
