--- a/web/scss/styles.scss
+++ b/web/scss/styles.scss
@@ -1,4 +1,4 @@
-@import "utilites.scss";
-@import "general.scss";
-@import "home.scss";
-@import "resume.scss";
+@use "utilites.scss";
+@use "general.scss";
+@use "home.scss";
+@use "resume.scss";
