--- a/web/scss/resume.scss
+++ b/web/scss/resume.scss
@@ -4,7 +4,10 @@
     font-family: "Source Sans 3", sans-serif;
     font-size:12pt;
     .container{
-        padding:5rem;
+        
+        &.page{
+            padding:5rem;
+        }
         margin:0 auto;
         max-width:1020px;
         @media (max-width: 1024px) {
@@ -13,10 +16,15 @@
         }
     }
     h1{
-        color:red;
+        color:#333;
         margin-bottom:0.5rem;
         font-size:28pt;
-        font-family: "Libre Baskerville", serif;
+        font-family: "Source Sans 3", sans-serif;
+        text-transform: uppercase;
+        font-weight: 600;
+        line-height:32pt;
+        letter-spacing: -2px;
+
     }
     h3{font-size:1.3rem}
     strong{
@@ -77,7 +85,7 @@
 .fw-normal{ font-weight:400; }
 .fw-bold{ font-weight:600; }
 
-.ff-libre, .ff-baskerville, .ff-libre-baskerville{ font-family:"Libre Baskerville", serif; }
+.ff-libre, .ff-baskerville, .ff-libre-baskerville{ font-family:"Source Sans 3", sans-serif; }
 .ff-source-sans{ font-family:"Source Sans 3", sans-serif; }
 .color-gray{ color:#555; }
 
