--- a/web/sandbox/translate/styles.css
+++ b/web/sandbox/translate/styles.css
@@ -9,7 +9,7 @@
 [data-theme="dark"] {
   --main-content-bg: #353535;
   --color-text: #f5f5f5;
-  --color-primary: #3399ff;
+  --color-primary: #1a1a1a;
    --sidebar-bg: #0b0b0b;
 }
 
@@ -20,7 +20,6 @@ body {
   color: var(--color-text);
   display: flex;
   flex-direction: column;
-  height: 100vh;
 }
 
 dashboard-header-main-content{
@@ -44,6 +43,8 @@ header {
   display: flex;
   flex: 1;
   min-height: 0;
+  justify-content:center;
+
 }
 
 nav {
@@ -64,7 +65,7 @@ nav a:focus, nav a:hover {
 main {
   flex: 1;
   padding: 1rem;
-  overflow-y: auto;
+  max-width:720px;
 }
 
 #campo_busqueda {
@@ -89,6 +90,10 @@ main {
 }
 #resultado{
   margin-top:2rem;
+  width:100%;
+}
+#resultado iframe{
+  width:100%;
 }
 /* Responsivo */
 @media (max-width: 768px) {
