--- a/web/sandbox/translate/styles.css
+++ b/web/sandbox/translate/styles.css
@@ -67,32 +67,40 @@ main {
   padding: 1rem;
   max-width:720px;
 }
+#search-form {
+  display: flex;
+  flex-direction: row;
+}
+#search {
+   font-size: 1.25rem;
+  width: 100%;
+  padding: 10px 45px 10px 15px;
+  border: 1px solid #ccc;
+  outline: none;
+}
 
-#campo_busqueda {
-  width: 40%;
-  padding: 0.5rem;
-  font-size: 1.25rem;
-}
-#boton_buscar {
-  padding: 0.5rem 1rem;
-  font-size: 1.25rem;
-  margin-left: 0.5rem;
-  background: var(--color-primary);
-  color: white;
+#submit {
+  background: transparent;
   border: none;
-  cursor: pointer;
+  outline: none;
+  margin-left: -35px;
+  cursor:pointer;
 }
-#boton_buscar:hover {
-  background:red
+#submit:hover {
+  opacity: 0.8;
 }
-#boton_buscar:focus {
-  outline: 2px solid #000;
+
+#submit img {
+  width: 25px;
+  height: 25px;
+  object-fit: cover;
 }
-#resultado{
+
+#result{
   margin-top:2rem;
   width:100%;
 }
-#resultado iframe{
+#result iframe{
   width:100%;
 }
 /* Responsivo */
@@ -106,7 +114,7 @@ main {
     justify-content: space-around;
   }
 }
+
 .visually-hidden {
-  position: absolute;
-  left: -9999px;
+ display: none;
 }
