--- a/web/scss/general.scss
+++ b/web/scss/general.scss
@@ -2,6 +2,7 @@
 body{
     font-size:12pt;
     color: #333;
+    font-family:'Source Sans 3', sans-serif;
 }
 
 p{
@@ -15,4 +16,35 @@ h1,h2,h3,h4,h5,h6{
   padding: 0;
   margin-bottom:1.2rem;
   font-weight:600;
+}
+h3{font-size:1.3rem}
+strong{
+    font-weight:600;
+    line-height:1.5rem;
+}
+p.ff-monospace{
+    margin-bottom:0.5rem;
+    line-height:1.5rem;
+}
+a{
+    color:#000000
+}
+ul{
+    list-style:none;
+    padding-left:0rem;
+    li{
+        margin-bottom:0.05rem;
+        font-size:1rem;
+        
+        &::before{
+            content: '−';
+            color: black;
+            font-weight: bold;
+            display: inline-block;
+            width: 1rem;
+            position:relative;
+            margin-left: 0rem;
+        }
+        
+    }
 }
