--- a/web/sandbox/translate/styles.css
+++ b/web/sandbox/translate/styles.css
@@ -118,3 +118,28 @@ main {
 .visually-hidden {
  display: none;
 }
+
+#loader {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  width: 60px;
+  height: 60px;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  margin: 0;
+}
+
+.spinner {
+	width: 40px;
+	height: 40px;
+	border: 4px solid rgba(0,0,0,0.2);
+	border-top-color: #858585;
+	border-radius: 50%;
+	animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+	to { transform: rotate(360deg); }
+}
