--- a/web/scss/resume.scss
+++ b/web/scss/resume.scss
@@ -3,15 +3,16 @@
     color:#333;
     font-family: "Source Sans 3", sans-serif;
     font-size:12pt;
+    margin:0;
     .container{
         
         &.page{
-            padding:5rem;
+            //padding:5rem;
         }
         margin:0 auto;
         max-width:1020px;
         @media (max-width: 1024px) {
-            padding: 2rem;
+            //padding: 2rem;
             
         }
     }
